@@ -14,4 +14,17 @@ sub test_this_baby {
     is 2, 2, "whee! ($class)";
 }
 
+sub test_reporting {
+    my $test          = shift;
+    my $report        = $test->test_report;
+    my $current_class = $report->current_class;
+    is $current_class->name, $test->test_class,
+      'current_class() should report the correct class name';
+    TODO: {
+        local $TODO = 'current method is not yet working';
+        is $report->current_method->name, 'test_reporting',
+          '... and we should also be able to get the current method name';
+    }
+}
+
 1;
